# taiga

./: .gitignore  Cargo.toml  Performance.md  README.md
.github/workflows/: ci.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  action.md  app.md  blinding.md  conclusion.md  examples.md  exec.md  exec_examples.md  intent.md  intro.md  introduction.md  message_passing.md  notes.md  overview.md  pbc.md  performance.md  privacy.md  private-circuits.md  questions.md  spec.md  spec_halo2.md  spec_zk_garage.md  taiga-by-example.md  token.md  tokens.md  transaction.md  transparent-anoma.md  unsorted.md  users.md  validity-predicates.md  zk-proofs.md
book/src/deprecated/: blinding.md  examples.md  token.md  unsorted.md  users.md
book/src/for-vampir/: zk-proofs-for-vampir.md
book/src/other/: README.md  overview-end.md
book/src/pbc/: action-vp.md  token-vp.md  user-vp.md
src/: action.rs  address.rs  app.rs  circuit.rs  constant.rs  doc_examples.rs  doc_test_simple_example.rs  el_gamal.rs  error.rs  example_nf_tree.rs  execute.rs  lib.rs  merkle_tree.rs  note.rs  nullifier.rs  nullifier_key.rs  poseidon.rs  signature.rs  tests.rs  token.rs  transaction.rs  user.rs  user_address.rs  utils.rs  validity_predicate.rs  vp_description.rs
src/circuit/: action_circuit.rs  blinding_circuit.rs  circuit_parameters.rs  execute_circuit.rs  gadgets.rs  hash_gadget.rs  integrity.rs  load_value.rs  merkle_tree_gadget.rs  nullifier.rs  validity_predicate.rs  vp_examples.rs
src/doc_examples/: addition_circuit.rs  app.rs  blinding.rs  note.rs  token.rs  transaction.rs  user.rs  validity_predicate.rs
src/halo2/: action.rs  constant.rs  merkle_tree.rs  mod.rs  note.rs  nullifier.rs  token.rs  user.rs  utils.rs
src/poseidon/: constants.rs  lfsr.rs  matrix.rs  mds.rs  mod.rs  poseidon.rs  poseidon_ref.rs  preprocessing.rs  round_constant.rs  round_numbers.rs
taiga_halo2/: Cargo.toml
taiga_halo2/benches/: Perfromance.md  action_proof.rs  compliance_proof.rs  resource_logic_proof.rs  vp_proof.rs
taiga_halo2/deprecated/simple_sudoku/: circuit.rs  main.rs  resource_logic.rs  vp.rs
taiga_halo2/deprecated/taiga_sudoku/: app_resource_logic.rs  app_vp.rs  dealer_intent_app_resource_logc.rs  dealer_intent_app_vp.rs  main.rs
taiga_halo2/deprecated/taiga_sudoku/gadgets/: state_check.rs  state_update.rs  value_check.rs
taiga_halo2/examples/simple_sudoku/: circuit.rs  main.rs  vp.rs
taiga_halo2/examples/sudoku/: app.rs  keys.rs  main.rs  proof.rs  vp_table.rs
taiga_halo2/examples/sudoku/app/: dealer_intent_vp.rs  intent_app_vp.rs  mod.rs  sudoku_app_vp.rs  valid_puzzle.rs  valid_sudoku.rs
taiga_halo2/examples/sudoku/app/gadgets/: state_update.rs
taiga_halo2/examples/sudoku/app/valid_puzzle/: circuit.rs  mod.rs
taiga_halo2/examples/sudoku/app/valid_sudoku/: circuit.rs  mod.rs  vp.rs
taiga_halo2/examples/taiga_sudoku/: app_vp.rs  dealer_intent_app_vp.rs  intent_app_vp.rs  main.rs
taiga_halo2/examples/taiga_sudoku/gadgets/: mod.rs  state_check.rs  state_update.rs  value_check.rs
taiga_halo2/examples/token/: app_vp.rs  main.rs  user_vp.rs  vp.rs
taiga_halo2/examples/tx_examples/: basic_swap_without_intent_note.rs  cascaded_partial_transactions.rs  main.rs  partial_fulfillment_token_swap.rs  token.rs  token_swap_with_intent.rs  token_swap_without_intent.rs
taiga_halo2/params/: params_15
taiga_halo2/src/: action.rs  api.rs  app.rs  application.rs  binding_signature.rs  compliance.rs  constant.rs  delta_commitment.rs  error.rs  executable.rs  lib.rs  merkle_tree.rs  net_value_commitment.rs  note.rs  note_encryption.rs  nullifier.rs  nullifier_key.rs  proof.rs  resource.rs  resource_encryption.rs  resource_logic_commitment.rs  resource_logic_vk.rs  resource_tree.rs  shielded_ptx.rs  taiga_api.rs  token.rs  transaction.rs  transparent_ptx.rs  user.rs  utils.rs  value_commitment.rs  vp_commitment.rs  vp_description.rs  vp_vk.rs
taiga_halo2/src/circuit/: action_circuit.rs  blake2s.rs  circuit_parameters.rs  compliance_circuit.rs  condition_circuit.rs  curve.rs  gadgets.rs  hash_to_curve.rs  integrity.rs  is_zero_circuit.rs  merkle_circuit.rs  mod.rs  note_circuit.rs  note_commitment.rs  note_encryption_circuit.rs  resource_commitment.rs  resource_encryption_circuit.rs  resource_logic_bytecode.rs  resource_logic_circuit.rs  resource_logic_examples.rs  schnorr.rs  schnorr_signature.rs  sqrt_circuit.rs  vamp_ir_utils.rs  verification.rs  vp_bytecode.rs  vp_circuit.rs  vp_examples.rs
taiga_halo2/src/circuit/curve/: iso_map.rs  map_to_curve.rs  to_affine.rs  to_affine.sage
taiga_halo2/src/circuit/gadgets/: add.rs  conditional_equal.rs  conditional_select.rs  extended_or_relation.rs  mul.rs  poseidon_hash.rs  schnorr_signature.rs  sub.rs  target_note_variable.rs  target_resource_variable.rs  triple_mul.rs  value_check.rs
taiga_halo2/src/circuit/resource_logic_examples/: cascade_intent.rs  field_addition.rs  or_relation_intent.rs  partial_fulfillment_intent.rs  receiver_resource_logic.rs  signature_verification.rs  token.rs
taiga_halo2/src/circuit/resource_logic_examples/partial_fulfillment_intent/: label.rs  swap.rs
taiga_halo2/src/circuit/vamp_ir_circuits/: pyth.halo2  pyth.inputs  pyth.pir  pyth.proof
taiga_halo2/src/circuit/verification/: compute_b.rs
taiga_halo2/src/circuit/vp_examples/: cascade_intent.rs  field_addition.rs  note_encryption_example.rs  or_relation_intent.rs  partial_fulfillment_intent.rs  receiver_vp.rs  signature_verification.rs  token.rs
taiga_halo2/src/circuit/vp_examples/partial_fulfillment_intent/: data_static.rs  label.rs  swap.rs
taiga_zk_garage/: Cargo.toml
taiga_zk_garage/benches/: action_proof.rs  vp_proof.rs
taiga_zk_garage/src/: action.rs  app.rs  doc_examples.rs  lib.rs  merkle_tree.rs  transaction.rs  user.rs  utils.rs  vp_description.rs
taiga_zk_garage/src/circuit/: action_circuit.rs  blinding_circuit.rs  gadgets.rs  integrity.rs
taiga_zk_garage/src/circuit/gadgets/: merkle_tree.rs
taiga_zk_garage/src/circuit/vp_examples/: point_addition.rs
taiga_zk_garage/src/doc_examples/: app.rs  blinding.rs
(+54 files in other folders)
