[workspace]
members = [
    "taiga_halo2",
]
resolver = "2"

[patch.crates-io]
halo2_gadgets = { git = "https://github.com/heliaxdev/halo2", branch = "taiga" }
halo2_proofs = { git = "https://github.com/heliaxdev/halo2", branch = "taiga" }
pasta_curves = { git = "https://github.com/heliaxdev/pasta_curves", branch = "taiga" }
