[package]
name = "taiga_halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
lazy_static = "1.4"
blake2b_simd = "1.0"
pasta_curves = "0.5.1"
blake2s_simd = "1"
ff = "0.13"
group = "0.13"
halo2_gadgets = { git = "https://github.com/heliaxdev/halo2", branch = "taiga", features = ["test-dependencies"] }
halo2_proofs = { git = "https://github.com/heliaxdev/halo2", branch = "taiga", features = ["dev-graph"] }
bitvec = "1.0"
subtle = { version = "2.3", default-features = false }
dyn-clone = "1.0"
reddsa = { git = "https://github.com/heliaxdev/reddsa.git", branch = "taiga" }
vamp-ir = { git = "https://github.com/anoma/vamp-ir.git", rev = "6d401f8a479951727586ef0c44c42edab3139090" }
bincode = "2.0.0-rc.3"
byteorder = "1.4"
num-bigint = "0.4"

rustler = { version = "0.29.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
borsh = { version = "= 1.0.0-alpha.4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
serde_json = "1.0"

[[bench]]
name = "action_proof"
harness = false

[[bench]]
name = "vp_proof"
harness = false

# [[example]]
# name = "taiga_sudoku"

[[example]]
name = "tx_examples"

[features]
default = []
nif = ["dep:rustler", "borsh", "pasta_curves/repr-erlang"]
serde = ["dep:serde", "pasta_curves/serde"]
borsh = ["dep:borsh"]
