[package]
name = "taiga_halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
lazy_static = "1"
blake2b_simd = "1"
pasta_curves = {git = "https://github.com/heliaxdev/pasta_curves", branch = "taiga"}
ff = "0.13"
group = "0.13"
halo2_gadgets = {git = "https://github.com/heliaxdev/halo2", branch = "taiga", features = ["test-dependencies"]}
halo2_proofs = {git = "https://github.com/heliaxdev/halo2", branch = "taiga", features = ["dev-graph"]}
bitvec = "1"
subtle = { version = "2.3", default-features = false }
dyn-clone = "1.0"
reddsa = "0.5"
vamp-ir = { git = "https://github.com/anoma/vamp-ir.git", rev = "6d401f8a479951727586ef0c44c42edab3139090"}
bincode = "2.0.0-rc.3"
borsh = {version = "0.10.3", features = ["const-generics"]}
byteorder = "1"
num-bigint = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0.0"

[[bench]]
name = "action_proof"
harness = false

[[bench]]
name = "vp_proof"
harness = false

[[example]]
name = "taiga_sudoku"

[[example]]
name = "tx_examples"
