[package]
name = "taiga_zk_garage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false }
ark-ff = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-ec = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-poly-commit = "0.3"
ark-poly = "0.3"
ark-bls12-381-new = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }
ark-ed-on-bls12-381-new = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }
ark-bw6-764-new = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }

rand = "0.8.4"
sha2 = "0.10.1"
plonk-core = { git = "https://github.com/heliaxdev/ark-plonk/", features = ["trace"], branch="taiga/randomized-circuits-rebase" }
plonk-hashing = { git = "https://github.com/heliaxdev/ark-plonk/", branch="taiga/randomized-circuits-rebase" }
blake2 = "0.9"
lazy_static = "1"
derivative = { version = "2", features = ["use_core"] }
thiserror = "1"
blake2b_simd = "1"
ark-std = "0.3"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }

[dev-dependencies]
ark-std = "0.3"
criterion = "0.3"
proptest = "1.0.0"

# [[bench]]
# name = "action_proof"
# harness = false

[[bench]]
name = "vp_proof"
harness = false
